--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -33,6 +33,10 @@
                     <span class="icon"><i class="fa-solid fa-user"></i></span>
                 </a>
 
+                <a href="{% url 'store_warehouse:dashboard' %}" class="navbar-item is-danger">
+                    <span> پنل داشبورد </span>
+                </a>
+
                 <span class="navbar-item has-text-muted">|</span>
 
                 <a href="#" class="navbar-item is-danger">
