--- a/sPay/templates/store_warehouse/dashboard.html
+++ b/sPay/templates/store_warehouse/dashboard.html
@@ -1,9 +1,29 @@
 
+
 {% extends 'base.html' %}
-{% block title %} لیست کالاها {% endblock %}
+{% block title %} داشبورد {% endblock %}
+
 {% load static %}
 
 {% block content %}
+<!-- dashboard -->
+ <div class="container">
+    <h1 class="title is-1">My Dashboard</h1>
+</div>
+<div class="container">
+    <div class="columns">
+        <div class="column is-4">
+            <div class="panel is-light">
+                <p class="panel-heading">Dashboard Settings</p>
+                <a href="#" class="panel-block">Edit my info</a>
+                <a href="#" class="panel-block">Change password</a>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+<!--            posts -->
     <div class="container">
         <br><br>
         <div class="columns">
@@ -31,7 +51,7 @@
                             <p>{{ l.description | truncatewords:10 | safe}}</p>
                         </div>
                         <div>
-                            <a href="{{ l.get_absolute_url }}"
+                            <a href="{% url 'store_warehouse:dashboard_post_detail' l.id %}"
                                class="button is-light card-item see-more">see more</a>
                         </div>
                     </div>
@@ -53,6 +73,4 @@
         </div>
     </div>
 
-
 {% endblock %}
-
