--- a/sPay/templates/store_warehouse/dashboard.html
+++ b/sPay/templates/store_warehouse/dashboard.html
@@ -16,12 +16,12 @@
             <div class="panel is-light">
                 <p class="panel-heading">Dashboard Settings</p>
                 <a href="#" class="panel-block">Edit my info</a>
-                <a href="#" class="panel-block">Change password</a>
+                <a href="{% url 'password_change' %}" class="panel-block">تغییر رمز عبور </a>
+<!--                <a href="{% url 'password_reset' %}" class="panel-block">ریست رمز عبور </a>-->
             </div>
         </div>
     </div>
 </div>
-
 
 <!--            posts -->
     <div class="container">
