--- a/sPay/templates/registration/login.html
+++ b/sPay/templates/registration/login.html
@@ -16,7 +16,9 @@
                 <div class="block">
                     {{ form }}
                 </div>
-                <br><br>
+                <br>
+                <a href="{% url 'password_reset' %}" class="navbar-item">فراموشی رمز عبور </a>
+                <br>
                 <div class="block">
                     <button type="submit" class="btn btn-success"> ورود </button>
                 </div>
