--- a/sPay/templates/store_warehouse/post_edit.html
+++ b/sPay/templates/store_warehouse/post_edit.html
@@ -4,11 +4,18 @@
 
 
 {% block content %}
-<h1> اصلاح مشخصات کالا </h1>
-<hr>
-<form method="post">
-    {% csrf_token %}
-    {{ form }}
-    <input type="submit" value="اصلاح">
-</form>
+<div class="container">
+    <div class="row">
+        <div class="col-4">
+            <h1> اصلاح مشخصات کالا </h1>
+            <hr>
+            <form method="post">
+                {% csrf_token %}
+                {{ form }}
+                <br><br>
+                <input type="submit" class="btn btn-primary" value="اصلاح">
+            </form>
+        </div>
+    </div>
+</div>
 {% endblock %}
