--- a/sPay/templates/store_warehouse/dashboard.html
+++ b/sPay/templates/store_warehouse/dashboard.html
@@ -54,6 +54,7 @@
                         <div class="subtitle is-6 is-light">
                             <span class="icon"><i class="fa-solid fa-user"></i></span>
                             <span>{{ l.user.first_name }} {{ l.user.last_name }}</span>
+                            <span>{{ l.user }}</span>
                             <span> | </span>
                             <span>{{ l.updated | timesince }}  ago </span>
                         </div>
