--- a/sPay/templates/partial/footer.html
+++ b/sPay/templates/partial/footer.html
@@ -25,6 +25,11 @@
             <a href="https://www.aparat.com/v/lKy6j">
                 https://www.aparat.com/v/lKy6j
             </a>
+            <br><br>
+            و همچنین در این مقاله:
+            <a href="https://jgce.sru.ac.ir/?_action=article&au=43665&_au=%DA%A9%DB%8C%D8%A7%D8%B1%D8%B4++%D8%A8%D8%B1%D9%88%D8%B4%D8%A7%D9%86">
+                آشکارسازی نشاء برنج در تصویر پهپاد با استفاده از شبکه DenseNet
+            </a>
         </p>
 
 <!--        <p><strong> کیارش بروشان </strong></p>-->
