--- a/sPay/templates/store_warehouse/post_detail.html
+++ b/sPay/templates/store_warehouse/post_detail.html
@@ -15,6 +15,7 @@
 {% endif %}
 
 <div class="block"><small>{{ p_d.name | title }}</small></div>
+    <span>{{ l.username }}</span>
 <br>
 <div class="block"><small>{{ p_d.Category }}</small></div>
 <p class="block">{{ p_d.description | linebreaks | safe }}</p>
