gitAndBlog app initiated

--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -9,6 +9,7 @@
             <a href="{% url 'store_warehouse:post_list' %}" class="navbar-item p-2"> نمایش پست‌ها </a>
             <a href="{% url 'spatial_services:spatial_service' %}" class="navbar-item p-2"> سرویس‌های مکان‌مبنا </a>
             <a href="{% url 'social_media:video_call' %}" class="navbar-item p-2">پیام‌رسان ویدئوئی </a>
+            <a href="{% url 'gitAndBlog:git_blog' %}" class="navbar-item p-2">Github and blog </a>
 
         </div>
 
