--- a/sPay/templates/store_warehouse/dashboard_post_detail.html
+++ b/sPay/templates/store_warehouse/dashboard_post_detail.html
@@ -28,6 +28,9 @@
                class="button is-light  is-danger is-small">حذف مشخصات کالا </a>
             <a href="{% url 'store_warehouse:post_edit' p_d.id %}"
                class="button is-light is-success is-small">اصلاح مشخصات کالا</a>
+
+            <button type="button" class="addToCartBtn btn btn-primary btn-rounded">Add to cart</button>
+
 <!--            <a href="@" class="button is-light is-warning is-small">see more</a>-->
 <!--            <p class="button is-small is-light is-light">Likes</p>-->
         </div>
@@ -136,5 +139,11 @@
             </div>
         </div>
     </div>
+
+
+<!--    cart -->
+    <script src="{% static 'main/js/cart.js' %}" type="text/javascript"></script>
+
+
 {% endblock %}
 </center>
