--- a/sPay/templates/base.html
+++ b/sPay/templates/base.html
@@ -30,6 +30,9 @@
           integrity="sha384-D0zT3yu3RBG+Jc54wtMtxDEyZGWfa30nEkS/o2AyBZUOmIpezYYjBLZjUetRV3iG"
           crossorigin="anonymous"></script>
 
+<!--  ajax for cart -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+
 </head>
 
 
