--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -1,8 +1,8 @@
 <nav class="navbar is-light" role="navigation">
-    <div class="navbar-brand">
-        <p class="navbar-item title is-3"><span class="icon"><i class="fa-solid fa-hashtag"></i></span></p>
-    </div>
+
+
     <div class="navbar-menu">
+
         <div class="navbar-start">
 
             <a href="{% url 'store_warehouse:first_page' %}" class="navbar-item p-2">خانه</a>
@@ -13,6 +13,22 @@
 
         </div>
 
+        <div class="navbar-mid navbar-brand">
+            <!--    <div class="navbar-brand">-->
+<!--        <p class="navbar-item title is-3"><span class="icon"><i class="fa-solid "></i></span></p>-->
+
+<!--    </div>-->
+            <p class="navbar-item title is-3 ">
+                <span class="icon">
+                    <i class="fa-solid">
+                         انباداری خرده‌فروشی
+                        <br>
+                        حامی کسب‌و‌کارهای غیر مجازی
+                    </i>
+                </span>
+            </p>
+
+        </div>
 
 
         <div class="navbar-end">
