--- a/sPay/templates/partial/navBar.html
+++ b/sPay/templates/partial/navBar.html
@@ -6,6 +6,7 @@
         <div class="navbar-start">
 
             <a href="{% url 'store_warehouse:first_page' %}" class="navbar-item p-2">خانه</a>
+            <a style="color: red" href="{% url 'store_warehouse:guide' %}" class="navbar-item p-2">راهنما</a>
             <a href="{% url 'store_warehouse:post_list' %}" class="navbar-item p-2"> نمایش پست‌ها </a>
             <a href="{% url 'spatial_services:spatial_service' %}" class="navbar-item p-2"> سرویس‌های مکان‌مبنا </a>
             <a href="{% url 'social_media:video_call' %}" class="navbar-item p-2">پیام‌رسان ویدئوئی </a>
