navBar.html css modified

--- a/sPay/templates/partial/footer.html
+++ b/sPay/templates/partial/footer.html
@@ -27,9 +27,11 @@
             </a>
             <br><br>
             و همچنین در این مقاله:
-            <a href="https://jgce.sru.ac.ir/?_action=article&au=43665&_au=%DA%A9%DB%8C%D8%A7%D8%B1%D8%B4++%D8%A8%D8%B1%D9%88%D8%B4%D8%A7%D9%86">
+            <a href="https://doi.org/10.22061/jrsgr.2023.2020">
                 آشکارسازی نشاء برنج در تصویر پهپاد با استفاده از شبکه DenseNet
             </a>
+            <br>
+            <a href="https://jrsgr.sru.ac.ir/article_2020.html">https://jrsgr.sru.ac.ir/article_2020.html</a>
         </p>
 
 <!--        <p><strong> کیارش بروشان </strong></p>-->
