post_list.html css modified

--- a/sPay/templates/partial/search.html
+++ b/sPay/templates/partial/search.html
@@ -6,8 +6,8 @@
 				{% csrf_token %}
 				<div class="blog-search-form">
 					<input name="search" placeholder="Search blog" type="text">
-					<button class="search-btn" type="submit">
-						<i class="fa fa-search" aria-hidden="true"></i>
+					<button class="search-btn btn-success" type="submit">
+						<i class="fa fa-search" aria-hidden="true"> جستجو </i>
 					</button>
 				</div>
 		</form>
