--- a/sPay/templates/base.html
+++ b/sPay/templates/base.html
@@ -2,15 +2,17 @@
 {% load static %}
 <html lang="en">
 
+
 <head>
-  <meta name="viewport" content="width=device-width , initial-scale=1 , maximum-scale=1 , minimum-scale=1"/>
-  <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <title>Ecom</title>
+    <meta name="viewport" content="width=device-width , initial-scale=1 , maximum-scale=1 , minimum-scale=1"/>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <title>{% block title %} title {% endblock %}</title>
 </head>
 
 <body>
-{% include 'partial/header.html' %}
 {% include 'partial/navBar.html' %}
 
 {% block content %} {% endblock %}
