--- a/sPay/templates/registration/password_reset_form.html
+++ b/sPay/templates/registration/password_reset_form.html
@@ -1,6 +1,6 @@
 
 {% extends 'base.html' %}
-{% block title %} صفحه ورود {% endblock %}
+{% block title %} فراموشی رمز {% endblock %}
 
 {% block content %}
 
