--- a/sPay/templates/store_warehouse/post_list.html
+++ b/sPay/templates/store_warehouse/post_list.html
@@ -1,59 +1,45 @@
 
 {% extends 'base.html' %}
-{% block title %} لیست کالاها {% endblock %}
 {% load static %}
 
+
 {% block content %}
-    <div class="container">
-        <br><br>
-        <div class="columns">
-        <div class="column is-8 is-light">
-            {% for l in list %}
-            <div class="card card-display">
-                <div class="card-image image imagesize">
-<!--                        image -->
-                    {% if l.scan_same_QR %}
-                        <img src="{{l.scan_same_QR.url}}" alt="Image" style="height: 16rem;">
-                    {% else %}
-                        <img src="{% static 'css/no image.png' %}" alt="Image" style="height: 16rem;">
-                    {% endif %}
-                </div>
-                <div class="card-top">
-                    <div class="card-content">
-                        <h3 class="title is-3">{{ l.name | title }}</h3>
-                        <div class="subtitle is-6 is-light">
-                            <span class="icon"><i class="fa-solid fa-user"></i></span>
-                            <span>{{ l.user.first_name }} {{ l.user.last_name }}</span>
-                            <span>{{ l.user }}</span>
-                            <span> | </span>
-                            <span>{{ l.updated | timesince }}  ago </span>
-                        </div>
-                        <div class="text content">
-                            <p>{{ l.description | truncatewords:10 | safe}}</p>
-                        </div>
-                        <div>
-                            <a href="{{ l.get_absolute_url }}"
-                               class="button is-light card-item see-more">see more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
+<div class="row">
+    <div class="col-lg-4">
+        {% for l in list %}
+            {% if l.scan_same_QR %}
+                <img src="{{ l.scan_same_QR.url}}" alt="simple picture" class="thumbnail">
+            {% else %}
+                <img src="{% static 'images/no image.png' %}" alt="simple picture" class="thumbnail">
+            {% endif %}
 
-            <!-- pagination -->
-            <br><br>
-            <div>
-                {% include 'partial/pagination.html' %}
+            <div class="box-element product">
+                <span>  {{ l.updated | timesince }}   تاریخ انتشار</span>
+                <h6 style="display:inline-block; float:right"><strong> {{ l.name | title }} </strong></h6>
+                <br><br>
+
+                <div class="text content">
+                    <p>{{ l.description | truncatewords:10 | safe}}</p>
+                </div>
+
+                <hr>
+                <button class="btn btn-outline-primary add-btn"> ارسال به کارت </button>
+                <a href="{{ l.get_absolute_url }}" class="btn btn-outline-success"> جزییات کالا </a>
+                <h4 style="display:inline-block; float:right">20 $</h4>
             </div>
+        {% endfor %}
+        <hr>
+        <br>
+        <div>
+            {% include 'partial/pagination.html' %}
         </div>
-<!--            category -->
-        {% include 'partial/category.html' %}
 
-<!--            search -->
+    </div>
+<!--        category-->
+        <div>
+            {% include 'partial/category.html' %}
+            <!--            search -->
         {% include 'partial/search.html' %}
         </div>
-    </div>
-
-
+</div>
 {% endblock %}
-
