dashboard.html css modified

--- a/sPay/templates/partial/category.html
+++ b/sPay/templates/partial/category.html
@@ -1,16 +1,16 @@
 <div class="column">
     <div class="panel is-light">
-        <p class="panel-heading ">Categories</p>
+        <p dir="rtl" class="panel-heading "> دسته‌بندی </p>
         <a href="#" class="panel-block">
             <p>category name</p>
         </a>
     </div>
-    <div class="panel is-light">
-        <p class="panel-heading">
-            Tags
-        </p>
-        <a href="#" class="button is-small is-rounded" style="margin:5px">
-            <p>tag name</p>
-        </a>
-    </div>
+<!--    <div class="panel is-light">-->
+<!--        <p class="panel-heading">-->
+<!--            Tags-->
+<!--        </p>-->
+<!--        <a href="#" class="button is-small is-rounded" style="margin:5px">-->
+<!--            <p>tag name</p>-->
+<!--        </a>-->
+<!--    </div>-->
 </div>
