--- a/sPay/templates/store_warehouse/post_detail.html
+++ b/sPay/templates/store_warehouse/post_detail.html
@@ -17,6 +17,12 @@
 <div class="block"><small>{{ p_d.name | title }}</small></div>
     <span>{{ l.username }}</span>
 <br>
+
+    <div class="block">
+         توضیحات ویدئویی
+        <br>
+        <a href="{{p_d.link}}">{{p_d.link}}</a>
+    </div>
 <div class="block"><small>{{ p_d.Category }}</small></div>
 <p class="block">{{ p_d.description | linebreaks | safe }}</p>
 <!--    <div class="block">Tags : <small>tags 1, tag 2, ...</small></div>-->
