--- a/sPay/templates/store_warehouse/dashboard.html
+++ b/sPay/templates/store_warehouse/dashboard.html
@@ -1,87 +1,74 @@
 
-
 {% extends 'base.html' %}
 {% block title %} داشبورد {% endblock %}
-
 {% load static %}
 
+
 {% block content %}
-<!-- dashboard -->
- <div class="container">
-    <h1 class="title is-1">My Dashboard</h1>
-</div>
-<div class="container">
-    <div class="columns">
-        <div class="column is-4">
+<div class="row">
+    <div class="col-lg-4">
+        {% for l in list %}
+            {% if l.scan_same_QR %}
+                <img src="{{ l.scan_same_QR.url}}" alt="simple picture" class="thumbnail">
+            {% else %}
+                <img src="{% static 'images/no image.png' %}" alt="simple picture" class="thumbnail">
+            {% endif %}
+
+            <div class="box-element product">
+                <span>  {{ l.updated | timesince }}   تاریخ انتشار</span>
+                <span>{{ l.user.first_name }} {{ l.user.last_name }}</span>
+                <span>{{ l.user }}</span>
+                <h6 style="display:inline-block; float:right"><strong> {{ l.name | title }} </strong></h6>
+                <br><br>
+
+                <div dir="rtl" class="block">
+                     <p dir="rtl">توضیحات ویدئویی</p>
+                    <br>
+                    <a href="{{l.link}}">{{l.link}}</a>
+                </div>
+                <br>
+
+                <p class="block">{{ p_d.description | linebreaks | safe }}</p>
+                <br>
+
+                <div class="text content">
+                    <p>{{ l.description | truncatewords:10 | safe}}</p>
+                </div>
+
+                <hr>
+                <button class="btn btn-outline-primary add-btn"> ارسال به کارت </button>
+                <a href="{{ l.get_absolute_url }}" class="btn btn-outline-success"> جزییات کالا </a>
+                <h4 style="display:inline-block; float:right">20 $</h4>
+            </div>
+        {% endfor %}
+        <hr>
+        <br>
+        <div>
+            {% include 'partial/pagination.html' %}
+        </div>
+
+    </div>
+
+
             <div class="panel is-light">
 
-                <p class="panel-heading">Dashboard Settings</p>
+                <p dir="rtl" class="panel-heading"> تنظیمات داشبورد</p>
 
-                <a href="{% url 'store_warehouse:add_post' %}"
+                <a dir="rtl" href="{% url 'store_warehouse:add_post' %}"
                    class="panel-block"> اضافه کردن کالا </a>
 
-                <a href="{% url 'password_change' %}"
+                <a dir="rtl" href="{% url 'password_change' %}"
                    class="panel-block">تغییر رمز عبور </a>
 
-                <a href="{% url 'password_reset' %}"
+                <a dir="rtl" href="{% url 'password_reset' %}"
                    class="panel-block">ریست رمز عبور </a>
 
                 <!--                <a href="#" class="panel-block">Edit my info</a>-->
 
-            </div>
+            {% include 'partial/category.html' %}
+                <!--            search -->
+            {% include 'partial/search.html' %}
         </div>
-    </div>
+
 </div>
-
-<!--            posts -->
-    <div class="container">
-        <br><br>
-        <div class="columns">
-        <div class="column is-8 is-light">
-            {% for l in list %}
-            <div class="card card-display">
-                <div class="card-image image imagesize">
-<!--                        image -->
-                    {% if l.scan_same_QR %}
-                        <img src="{{l.scan_same_QR.url}}" alt="Image" style="height: 16rem;">
-                    {% else %}
-                        <img src="{% static 'css/no image.png' %}" alt="Image" style="height: 16rem;">
-                    {% endif %}
-                </div>
-                <div class="card-top">
-                    <div class="card-content">
-                        <h3 class="title is-3">{{ l.name | title }}</h3>
-                        <div class="subtitle is-6 is-light">
-                            <span class="icon"><i class="fa-solid fa-user"></i></span>
-                            <span>{{ l.user.first_name }} {{ l.user.last_name }}</span>
-                            <span>{{ l.user }}</span>
-                            <span> | </span>
-                            <span>{{ l.updated | timesince }}  ago </span>
-                        </div>
-                        <div class="text content">
-                            <p>{{ l.description | truncatewords:10 | safe}}</p>
-                        </div>
-                        <div>
-                            <a href="{% url 'store_warehouse:dashboard_post_detail' l.id %}"
-                               class="button is-light card-item see-more">see more</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            {% endfor %}
-
-            <!-- pagination -->
-            <br><br>
-            <div>
-                {% include 'partial/pagination.html' %}
-            </div>
-        </div>
-<!--            category -->
-        {% include 'partial/category.html' %}
-
-<!--            search -->
-        {% include 'partial/search.html' %}
-        </div>
-    </div>
-
 {% endblock %}
