--- a/sPay/templates/store_warehouse/dashboard1.html
+++ b/sPay/templates/store_warehouse/dashboard1.html
@@ -1,9 +1,39 @@
 
+
 {% extends 'base.html' %}
-{% block title %} لیست کالاها {% endblock %}
+{% block title %} داشبورد {% endblock %}
+
 {% load static %}
 
 {% block content %}
+<!-- dashboard -->
+ <div class="container">
+    <h1 class="title is-1">My Dashboard</h1>
+</div>
+<div class="container">
+    <div class="columns">
+        <div class="column is-4">
+            <div class="panel is-light">
+
+                <p class="panel-heading">Dashboard Settings</p>
+
+                <a href="{% url 'store_warehouse:add_post' %}"
+                   class="panel-block"> اضافه کردن کالا </a>
+
+                <a href="{% url 'password_change' %}"
+                   class="panel-block">تغییر رمز عبور </a>
+
+                <a href="{% url 'password_reset' %}"
+                   class="panel-block">ریست رمز عبور </a>
+
+                <!--                <a href="#" class="panel-block">Edit my info</a>-->
+
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--            posts -->
     <div class="container">
         <br><br>
         <div class="columns">
@@ -32,7 +62,7 @@
                             <p>{{ l.description | truncatewords:10 | safe}}</p>
                         </div>
                         <div>
-                            <a href="{{ l.get_absolute_url }}"
+                            <a href="{% url 'store_warehouse:dashboard_post_detail' l.id %}"
                                class="button is-light card-item see-more">see more</a>
                         </div>
                     </div>
@@ -54,6 +84,4 @@
         </div>
     </div>
 
-
 {% endblock %}
-
