--- a/sPay/templates/store_warehouse/post_list.html
+++ b/sPay/templates/store_warehouse/post_list.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <hr>
-                <button class="btn btn-outline-primary add-btn"> ارسال به کارت </button>
+<!--                <button class="btn btn-outline-primary add-btn"> ارسال به کارت </button>-->
                 <a href="{{ l.get_absolute_url }}" class="btn btn-outline-success"> جزییات کالا </a>
                 <h4 style="display:inline-block; float:right">20 $</h4>
             </div>
