cart.html modified price and quantity is dynamic

--- a/sPay/templates/cart/cart.html
+++ b/sPay/templates/cart/cart.html
@@ -13,28 +13,41 @@
         <div class="box-element">
             <div class="cart-row">
                 <div style="flex:2;"></div>
-                <div style="flex:2;"><strong> تعداد: </strong></div>
+                <div style="flex:2;"><strong> نام کالا </strong></div>
                 <div style="flex:1;"><strong> فی </strong></div>
                 <div style="flex:1;"><strong> quantity </strong></div>
                 <div style="flex:1;"><strong> مجموع </strong></div>
             </div>
 
-            <div class="cart-row">
-                <div style="flex:2;"><img src="{% static 'images/no image.png' %}" alt="" class="row-image"></div>
-                <div style="flex:2;"><p> محصول۱ </p></div>
-                <div style="flex:1;"><p> فی ﷼</p></div>
-                <div style="flex:1;"><p class="quantity"> 2 </p></div>
-                <div style="flex:1;"><p> ۳۰۰ ﷼ </p></div>
-            </div>
+            {% for item in items %}
+                <div class="cart-row">
+                    {% if item.product.image_front %}
+                        <div style="flex:2;"><img src="{{ item.product.image_front.url }}" alt="" class="row-image"></div>
+                    {% else %}
+                        <div style="flex:2;"><img src="{% static 'images/no image.png' %}" alt="" class="row-image"></div>
+                    {% endif %}
+                    <div style="flex:2;"><p> {{ item.product.name | title }}  </p></div>
+                    <div style="flex:1;"><p> {{ item.product.price }} ﷼</p></div>
+                    <div style="flex:1;"><p class="quantity"> {{ item.quantity }} </p></div>
+                    <div style="flex:1;"><p> {{ item.get_total }} ﷼ </p></div>
+                </div>
+            {% endfor %}
+
+            <table class="table">
+                <tr>
+                    <th><h5> تعداد کل کالاها: <strong> {{ order.get_cart_items }} </strong></h5></th>
+                    <th><h5> مجموع قیمت کل کالاها: <strong> {{ order.get_cart_total }} ﷼ </strong></h5></th>
+                </tr>
+            </table>
+
         </div>
         <br>
 
         <div class="box-element">
 
             <table class="table">
+                <p dir="rtl"> نحوه پرداخت </p>
                 <tr>
-                    <th><h5> تعداد: <strong> 3 </strong></h5></th>
-                    <th><h5> مجموع: <strong> ۴۲ ﷼ </strong></h5></th>
                     <th><a href="#" class="btn btn-success" style= "float:center; margin:5;">  نقدی  </a>  </th>
                     <th><a href="#" class="btn btn-success" style= "float:center; margin:5;">  کارت‌خوان  </a>  </th>
                     <th><a href="#" class="btn btn-success" style= "float:center; margin:5;"> کارت به کارت  </a>  </th>
