--- a/sPay/templates/store_warehouse/dashboard.html
+++ b/sPay/templates/store_warehouse/dashboard.html
@@ -28,16 +28,13 @@
                 </div>
                 <br>
 
-                <p class="block">{{ p_d.description | linebreaks | safe }}</p>
-                <br>
-
                 <div class="text content">
                     <p>{{ l.description | truncatewords:10 | safe}}</p>
                 </div>
 
                 <hr>
-<!--                <button class="btn btn-outline-primary add-btn"> ارسال به کارت </button>-->
-                <a href="{% url 'store_warehouse:cart' %}" class="btn btn-outline-success">ارسال به کارت </a>
+                <button data-product={{l.id}} data-action="add" class="btn btn-outline-secondary add-btn update-cart"> ارسال به کارت </button>
+<!--                <a href="{% url 'store_warehouse:cart' %}" class="btn btn-outline-success">ارسال به کارت </a>-->
                 <a href="{% url 'store_warehouse:dashboard_post_detail' l.id %}" class="btn btn-outline-success"> جزییات کالا </a>
                 <h4 style="display:inline-block; float:right">{{ l.price }} هزار تومان</h4>
             </div>
